.devcontainer/test/jinjaboard/errors/yaml_parse_error.yaml.j2
cards:
  - type: markdown
    content: "First card, fine."
  - type: markdown
      content: "Second card has bad indentation, breaking the whole parse."
  - type: markdown
    content: "Third card, never reached."
